# libs/server/api/src/api/logical_entities.rs
@@ -8,8 +8,8 @@ use serde::Deserialize;
 use serde_json::{json, Value};
 
 use crate::domain::{
-    normalize_sub_type, EntityAttribute, LogicalEntity, LogicalEntityDescription,
-    LogicalEntityType, Ref, ServerError, Workspace,
+    normalize_sub_type, LogicalEntity, LogicalEntityDescription, LogicalEntityType, Ref,
+    ServerError, Workspace,
 };
 
 use super::{
@@ -29,26 +29,24 @@ struct PageQuery {
 #[derive(Debug, Deserialize)]
 #[serde(rename_all = "camelCase")]
 struct CreateLogicalEntityInput {
+    name: String,
+    label: Option<String>,
     #[serde(rename = "type")]
     entity_type: LogicalEntityType,
     sub_type: Option<String>,
-    name: String,
-    label: Option<String>,
-    description: Option<String>,
     #[serde(default)]
-    attributes: Vec<EntityAttribute>,
+    content: String,
 }
 
 #[derive(Debug, Deserialize)]
 #[serde(rename_all = "camelCase")]
 struct UpdateLogicalEntityInput {
+    name: Option<String>,
+    label: Option<String>,
     #[serde(rename = "type")]
     entity_type: Option<LogicalEntityType>,
     sub_type: Option<String>,
-    name: Option<String>,
-    label: Option<String>,
-    description: Option<String>,
-    attributes: Option<Vec<EntityAttribute>>,
+    content: Option<String>,
 }
 
 async fn load_workspace(state: &AppState, workspace_id: &str) -> Result<Workspace, ServerError> {
@@ -71,8 +69,8 @@ fn logical_entity_description(
         sub_type,
         name: input.name,
         label: input.label,
-        description: input.description,
-        attributes: input.attributes,
+        description: Some(input.content),
+        attributes: Vec::new(),
         created_at: String::new(),
         updated_at: String::new(),
     })
@@ -154,10 +152,8 @@ async fn update_logical_entity(
                 sub_type,
                 name: input.name.unwrap_or_else(|| current.name.clone()),
                 label: input.label.or_else(|| current.label.clone()),
-                description: input.description.or_else(|| current.description.clone()),
-                attributes: input
-                    .attributes
-                    .unwrap_or_else(|| current.attributes.clone()),
+                description: input.content.or_else(|| current.description.clone()),
+                attributes: current.attributes.clone(),
                 created_at: current.created_at.clone(),
                 updated_at: current.updated_at.clone(),
             },
